# A8

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: daily-digest.yml
data/: kbo_enrich_v1.py  kbo_enrich_v2.py  kbo_process.py
database/: client.py  models.py
mailer/: digest_builder.py  run.py  sender.py
mailer/templates/: digest.html
processor/: cpv_filter.py  prescreen.py  summarizer.py
scraper/: base.py  ted_europa.py
site/: index.html
site/css/: style.css
site/functions/api/: waitlist.js
site/js/: main.js
supabase/migrations/: 001_create_waitlist.sql  002_create_tenders.sql  003_create_subscribers.sql
