[project]
name = "kansenradar"
version = "0.1.0"
description = "Kansenradar — dagelijkse tender-digest pipeline (scraper, AI-processor, mailer)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.32.0",
    "supabase>=2.9.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
